objects/L2I_SR_Quotes__c.object
<CustomObject>
    <fields>
        <fullName>Deal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SR Quotes &amp; Opportunities</relationshipLabel>
        <relationshipName>SR_Quotes_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <formula>Quote__r.SBQQ__Opportunity2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Quote__r.SBQQ__Opportunity2__r.L2I_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Quotes from Deal on Support Request are allowed.</errorMessage>
            <filterItems>
                <field>SBQQ__Quote__c.SBQQ__Opportunity2__r.L2I_Parent_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deal_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>SR Quotes &amp; Opportunities</relationshipLabel>
        <relationshipName>DSR_Quotes_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Request__c</fullName>
        <label>Support Request</label>
        <referenceTo>L2I_Support_Request__c</referenceTo>
        <relationshipName>DSR_Quotes_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SR Quote &amp; Opportunity</label>
    <nameField>
        <displayFormat>DQO-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Quotes &amp; Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>